ui landing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,7 +192,11 @@ button:focus,
     outline: none;
     box-shadow: none;
 }
-
+@media screen and (max-width:990px){
+    .right-hero{
+        display: none;
+    }
+}
 @media screen and (min-width:1200px) {
     .container {
         max-width: 1170px;
@@ -431,7 +435,7 @@ header.fixed .navbar {
 .navbar {
     padding-left: 0;
     padding-right: 0;
-    padding-top: 35px;
+    padding-top: 15px;
 }
 
 .navbar-expand-lg .navbar-nav {
@@ -677,18 +681,18 @@ header.fixed .navbar {
 
 /* hero slider text */
 .banner_section .banner_text {
-    margin-top: -50px;
+    margin-top: -20px;
 }
 
 /* hero slider heading h1 */
-.banner_section .banner_text h1 {
-    font-size: 55px;
+.banner_section .banner_text .welcome-text {
+    font-size: 35px;
     color: var(--dark-purple);
     letter-spacing: -1.5px;
     font-weight: 700;
 }
 
-.banner_section .banner_text h1 span {
+.banner_section .banner_text .welcome-text span {
     color: var(--purple);
 }
 
@@ -803,8 +807,8 @@ header.fixed .navbar {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 475px;
-    height: 475px;
+    width: 325px;
+    height: 325px;
     border-radius: 100%;
     background-color: var(--purple);
     z-index: -5;
