update trending section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,10 +218,15 @@ button:focus,
     color: var(--purple);
 }
 
-.row_am {
-    padding: 50px 0;
+.interface_section {
+   margin-bottom: -10%;
 }
-
+.row_am{
+    padding-top: 50px;
+}
+.frame_img{
+    border-radius: 15px;
+} 
 /* purple button */
 .puprple_btn {
     background-color: var(--purple);
@@ -1651,7 +1656,9 @@ iframe#youtubevideo {
     margin-top: 35px;
     min-height: 720px;
 }
-
+.screen_frame_img{
+    height: 178px;
+}
 /* interface images */
 .interface_section .owl-item .screen_frame_img img {
     transform: scale(.9);
@@ -1783,6 +1790,7 @@ box-shadow: 1px 4px 8px -2px rgba(0,0,0,0.5);
 /* latest story image */
 .latest_story .story_box .story_img {
     position: relative;
+    max-height: 50%;
 }
 
 .latest_story .story_box .story_img img {
@@ -3617,7 +3625,57 @@ header.fix_style.white_header {
 .container-left{
     margin-top:-4%;
 }
+.story_box_image {
+    background-color: var(--bg-white);
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0px 4px 30px #EDE9FE; 
+}
 
+/* latest story image */
+.story_box_image{
+    position: relative;
+}
+
+.story_box_image .story_img img {
+    max-width: 100%;
+    border-radius: 12px;
+}
+
+.story_box_image .story_img span {
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    font-size: 14px;
+    color: var(--text-white);
+}
+
+/* latest story pargraph */
+.story_box_image .story_text {
+    padding: 20px 30px;
+}
+
+/* latest story heading h3 */
+.story_box_image .story_text h3 {
+    color: var(--dark-purple);
+    font-size: 20px;
+    margin-bottom: 15px;
+    font-weight: 600;
+}
+
+/* latest story link text */
+.story_box_image .story_text a {
+    color: var(--purple);
+    margin-top: 25px;
+    display: block;
+    font-size: 14px;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+
+.story_box_image .story_text a:hover {
+    text-decoration:underline;
+}
 
 
 
