--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,7 +147,10 @@
     --light-bg: #DFDAF3;
 }
 
-
+header{
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
 
 /* ------Common-Css------------- */
 
